+ Fixing issues with Announcement bar being active covering up the main page content and off canvas cart
 + Creating a JS component for the announcement bar so JS triggers when its on the page and applies margin top to main and the off canvas cart

 + Refactoring code for header and announcement bar so they are in a container that is always sticky and they are relative so they interact with each other when the announcement bar changes height

--- a/assets/base.css
+++ b/assets/base.css
@@ -476,7 +476,7 @@ h6:empty {
 \*------------------------------------*/
 
 main {
-  margin-top: 55px;
+  margin-top: 54px;
 }
 
 @media screen and (min-width: 700px) {
