--- a/assets/component-announcement-bar.css
+++ b/assets/component-announcement-bar.css
@@ -3,11 +3,12 @@
 \*------------------------------------*/
 
 #shopify-section-announcement-bar {
-    z-index: 4;
+    z-index: 21;
     position: relative;
 }
 
 .announcement-bar {
+    display: block;
     border-bottom: 1px solid rgb(var(--color-base-text));
     color: rgb(var(--color-base-text));
     background-color: rgb(var(--color-base-background-1));
@@ -46,15 +47,4 @@
     padding: .75rem 2rem;
     margin: 0;
     font-family: var(--primary-font-family);
-}
-
-
-#shopify-section-announcement-bar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-#shopify-section-announcement-bar+#shopify-section-header sticky-header {
-    top: 2.5rem;
 }
